--- a/app/src/main/res/layout/measure_result_item.xml
+++ b/app/src/main/res/layout/measure_result_item.xml
@@ -30,6 +30,7 @@
         android:textSize="14sp"
         android:maxLines="1"
         android:ellipsize="end"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toStartOf="@+id/conversionSymbolTv"
         app:layout_constraintStart_toEndOf="@+id/categoryItem" />
 
